comments: cull the never-culled files (pass 2)
Second pass of the comment cull, covering the ~535 files the first pass never
touched. Same rule: delete unless the comment carries a hidden catch the code
cannot convey. No percentage target - the deletion rate that hidden-catch-only
produces is the answer.

Keep rates came out where they should: 78% in the crypto/auth primitives, 84% in
the metrics catalog, 63% in Raft internals, and 41-56% in test- and wiring-heavy
code. Several files finished at ZERO deletions because every comment cleared the
bar - AtRestKeys keeps the AES-GCM "(key, nonce) MUST NEVER be reused" invariant,
ServerObeysAuthTest keeps 38 comments that each explain what an opaque conformance
clause id actually requires.

Two provably WRONG comments were found and removed rather than rewritten:

- ChunkedInstallSnapshotTest said "even though it is not the final chunk" on a
  call that passes done=true.
- ConfigSigner claimed "Ed25519 (or ECDSA fallback)"; ALGORITHM is hardcoded
  "Ed25519" and no ECDSA path exists in the module.

Five dead documentation citations fixed. A citation that resolves to nothing is
decoration, but they needed different treatments: docs/phase0/threading-contract.md
had been RELOCATED (path corrected to docs/architecture/raft-threading-contract.md),
while ops/runbooks/upgrade.md has no successor at all - no document states the
two-release deprecation rule - so the pointer was dropped rather than repointed at
a plausible-looking guess. The hdparm -W1 / no-fua detail was kept when its
enclosing doc reference died.

RFC clause ids (W2-3, AU4-4) and TLA+ invariant names (INV-SI-2, INV-ANCHOR-LOWER)
were KEPT throughout: they resolve to docs/rfc/driver-protocol/*.md and to the
specs, so they are load-bearing citations, not the internal item numbers the rule
tells you to strip.

Section banners were judged individually, not swept: pure rules and organisational
labels go, but "// --- delta-pump state (session thread only) ---" is a thr